--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=network-monitor
+
+# datasource connection properties
+spring.datasource.url=${POSTGRES_URL_NETWORK_STATUS_LOGS}
+spring.datasource.name=NetworkStatusLogs
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_TOKEN}
+
+server.error.include-stacktrace=never
+
+server.port=8080
