integration testing setup completed

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -13,20 +13,7 @@
 	<version>0.0.1</version>
 	<name>network-monitor</name>
 	<description>Back end server and API layer for network connectivity monitor</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
-	<properties>
+		<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -40,6 +27,10 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
