--- a/monitor/platformio.ini
+++ b/monitor/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^7.2.0
+lib_deps = 
+	bblanchon/ArduinoJson@^7.2.0
+	marian-craciunescu/ESP32Ping@^1.7
